# DSA_in_Cpp

./: .gitignore  CMakeLists.txt  first_occurance_string  isomorphic_string  max-binary-subArrays  maxSubarray  merge_interval.cpp  nextPermutation  setMaxZeros  single_number_3  spiralMatrics
coding_ninja/: 01.cpp  arr_pair_sum.cpp  book_allocation.cpp  ceil_the_floor.cpp  count_loop_nodes_in_LL.cpp  deleting_end_node_DLL.cpp  longest_subarr_sum_k.cpp  longest_subarr_sum_k_signed  longest_subarr_sum_k_signed.cpp  max_subarray.cpp  merge_sort.cpp  min_dishes.cpp  no_of_inversions.cpp  quick_sort.cpp  reverse_double_linked_list.cpp  square_root.cpp  union.cpp
gfg/linked-list/: insert_in_DLL.cpp
gfg/recursion/: sort-stack.cpp
leetcode/: 2_sum.cpp  3_cons_int_sum.cpp  3_sum1.cpp  3_sum2.cpp  4_sum.cpp  array_mountain.cpp  binary_search_index.cpp  buy_sell_stock.cpp  deletion_in_LL.cpp  first_last_pos.cpp  fruits_into_basket.cpp  koko_eating_bananas.cpp  longestConsecutive.cpp  majority_element.cpp  max_consecutive_arr.cpp  merge_interval.cpp  middle_elem_LL.cpp  min_days_m_bouquets.cpp  nextPermutation.cpp  odd_even_LL.cpp  palindrome_LL.cpp  pascals_triangle.cpp  pivotIndex_apr1.cpp  pivotIndex_apr2.cpp  pos_neg_pair_arr.cpp  product_except_self.cpp  reverse_LL.cpp  reverse_pair.cpp  rotate_array.cpp  rotated_sorted_arr1.cpp  rotated_sorted_arr2.cpp  setMaxZeros.cpp  ship_package_capacity.cpp  single_number.cpp  sort_colors.cpp  spiralMatrics.cpp  trapping-rainwater.cpp
leetcode/basic_questions/: closestPrimesInRange.cpp
leetcode/binaryTree/: TreeNode.h  levelOrderTraversal.cpp  maxDepth.cpp  preorderTraversal.cpp
leetcode/binary_search/: minRotatedSortedArr.cpp  singleElemSortedArr.cpp
leetcode/bit_manipulation/: check_power_of_two.cpp  count_no_of_bits.cpp  divide_two_integers.cpp  findXorRange.cpp  minBitsFlip.cpp  no_of_subsets.cpp  reverse_bits.cpp  single_number_1.cpp  single_number_3.cpp
leetcode/graph/: findAllPaths.cpp
leetcode/greedy/: balanceParenthesis  balanceParenthesis.cpp  coinChange  coinChange.cpp  insertInterval.cpp  jobSequencing.cpp  jumpGame.cpp  jumpGameII  jumpGameII.cpp  lemonadeChange  lemonadeChange.cpp  merge_interval.cpp  minNoOfPlatforms.cpp  nMeetings1Room.cpp  noOverlappIngtervals.cpp
leetcode/heap/: handOfStraight.cpp  maxHeap.cpp  mergeKSortedArrays.cpp
leetcode/linked-list/: LL_cycle.cpp  LL_cycle2_approach1.cpp  LL_cycle2_approach2.cpp  ListNode.h  add_two_nos.cpp  delete_mid_node_LL.cpp  delete_node_from_end_approach1.cpp  deletion_in_LL.cpp  palindrome_LL.cpp  reverse_LL.cpp  reverse_LL_in_K_groups.cpp  sort_LL.cpp
leetcode/recursion/: count-good-numbers.cpp  generate_all_subsets.cpp  generate_all_subsets.mermaid  generate_parenthesis.cpp  generate_parenthesis.mermaid  pow.cpp
leetcode/sliding-window/: count-nice-subarrays.cpp  fruits_into_basket.cpp  longest-substr-without-repeat-chars.cpp  max-binary-subArrays.cpp  max-cons-1s-k-replacement.cpp  max-points-from-card.cpp  maxSubarray.cpp  min-window-substring.cpp  subArrays-distinct-integers.cpp
leetcode/sliding_window/: count-nice-subarrays.cpp  max-binary-subArrays.cpp
leetcode/stacks-and-queues/: next-greater-elem-in-array.cpp
leetcode/stacks-and-queues/queues/: LFU-cache.cpp  LRU.cpp  stack-using-queue.cpp
leetcode/stacks-and-queues/stacks/: asteroid-collision.cpp  get-min-stack.cpp  largest-reactngle-histogram-approach1.cpp  largest-reactngle-histogram-approach2.cpp  next-greater-elem-in-array2.cpp  online-stock-plan.cpp  remove-k-digits.cpp  subarray-min-sum.cpp  sum-subarray-ranges.cpp  valid-parenthesis.cpp
leetcode/string/: addBinary.cpp  anagram.cpp  count_and_stay.cpp  first_occurance_string.cpp  isomorphic_string.cpp  longest-prefix-also-suffix.cpp  longest_common_prefix.cpp  longest_palindromic_substr.cpp  longest_repeat_char_replacement.cpp  maxOddSubstr.cpp  max_nesting_depth.cpp  min_parenthesis_valid_add.cpp  removeDuplicates.cpp  remove_outer_parenthesis.cpp  repeated_string_match.cpp  replaceLexographicallynext.cpp  reverse_words_in_string.cpp  roman-no.cpp  rotate_string.cpp  shortest-palindrome.cpp  shortest_palindrome.cpp  sort_by_freq.cpp  string_to_int.cpp  substr_all_3_chars.cpp  sum_beauty_strings.cpp
linked_list/: linked_list1.cpp
sorting/: binary_search.cpp  quick_sort.cpp
